--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "ID Commerce",
-  "short_name": "IDCom",
+  "name": "Zero",
+  "short_name": "Zero",
   "theme_color": "#b11226",
   "background_color": "#000000",
   "display": "standalone",
